--- a/package.json
+++ b/package.json
@@ -22,12 +22,38 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/jest": "^25.2.2",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-native": "^0.62.10",
+    "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "~25.2.6",
+    "concurrently": "^5.2.0",
     "jest": "~25.2.6",
-    "react-test-renderer": "~16.9.0"
+    "react-native-typescript-transformer": "^1.2.13",
+    "react-test-renderer": "~16.9.0",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.0.0",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.2"
   },
   "jest": {
-    "preset": "react-native"
-  },
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
+      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "testPathIgnorePatterns": [
+      "\\.snap$",
+      "<rootDir>/node_modules/"
+    ],
+    "cacheDirectory": ".jest/cache"
+  }
   "private": true
 }
